# FERM_python

./: README.md  notebook.py  pyproject.toml
html/: ferm.html  index.html  search.js
html/ferm/: cluster_runner.html  config.html  distance.html  model.html  sampling.html  utils.html
scripts/: run_ferm.py  run_ferm_cluster.py
src/ferm/: __init__.py  cluster_runner.py  config.py  distance.py  model.py  preprocessing.py  sampling.py  utils.py
tests/: test_model.py  test_sampling.py  test_utils.py
